testsuite/tests/linear/should_fail/Linear1.stderr

Linear1.hs:10:14: error:
    • Couldn't match expected multiplicity ‘'One’ of variable ‘x’ with actual multiplicity ‘'Omega’
    • In an equation for ‘incorrectDup’: incorrectDup x = (x, x)

Linear1.hs:14:15: error:
    • Couldn't match expected multiplicity ‘'One’ of variable ‘x’ with actual multiplicity ‘'Omega’
    • In an equation for ‘incorrectDrop’: incorrectDrop x = ()
